--- a/wwwroot/res/css/styles.css
+++ b/wwwroot/res/css/styles.css
@@ -30,7 +30,7 @@ html, body {
     background: #555;
     color: #fff;
     font-family: "Verdana";
-    font-size: 16px;
+    font-size: 18px;
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -39,6 +39,24 @@ html, body {
 
 .textarea {
     border: 5px solid #73B3C9;
-    background: #255665;
+    background: #245662;
     padding: 15px;
+}
+
+.btn {
+    background: #4C5560;
+    color: #fff;
+    font-family: "Verdana";
+    font-size: 18px;
+    border: 5px solid #4C5560;
+    border-radius: 0;
+    outline: 0;
+}
+
+.btn:hover, .btn:focus {
+    border: 5px solid #73B3C9;
+    color: #fff;
+    background: #395B83;
+    border-radius: 0;
+    outline: 0;
 }
