--- a/wwwroot/res/css/styles.css
+++ b/wwwroot/res/css/styles.css
@@ -35,6 +35,10 @@ html, body {
     -webkit-user-select: none;
     -moz-user-select: none;
     cursor: default;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .textarea {
