--- a/wwwroot/res/css/styles.css
+++ b/wwwroot/res/css/styles.css
@@ -26,6 +26,10 @@
     src: url("../fon/verdana/verdanaz.ttf") format("truetype");
 }
 
+html[outer-space=true], body[outer-space=true] {
+    background: #000;
+}
+
 html, body {
     background: #555;
     color: #fff;
@@ -39,6 +43,10 @@ html, body {
     margin: 0;
     width: 100%;
     height: 100%;
+}
+
+#gameContainer {
+    overflow: hidden;
 }
 
 .textarea {
