--- a/wwwroot/res/css/styles.css
+++ b/wwwroot/res/css/styles.css
@@ -55,6 +55,15 @@ html, body {
     padding: 15px;
 }
 
+.message-dialog {
+    border: 5px solid #333;
+    border-radius: 15px;
+    background: #ddd;
+    color: #000;
+    padding: 15px;
+    word-break: normal;
+}
+
 .btn {
     background: #4C5560;
     color: #fff;
