--- a/wwwroot/res/css/styles.css
+++ b/wwwroot/res/css/styles.css
@@ -51,7 +51,15 @@ html, body {
     border: 5px solid #477b8d;
 }
 
-.btn:hover, .btn:focus {
+.btn:hover {
+    border: 5px solid #647e9c;
+    color: #fff;
+    background: #5e738b;
+    border-radius: 0;
+    outline: 0;
+}
+
+.btn:focus {
     border: 5px solid #73B3C9;
     color: #fff;
     background: #395B83;
