--- a/wwwroot/res/css/styles.css
+++ b/wwwroot/res/css/styles.css
@@ -1,3 +1,7 @@
+html, body {
+    transition: background-color 0.5s;
+}
+
 html[outer-space=true], body[outer-space=true] {
     background: #000;
 }
