--- a/src/ui/TextArea.scss
+++ b/src/ui/TextArea.scss
@@ -1,6 +1,6 @@
-.textarea {
+.TextArea {
     border: 5px solid #73B3C9;
     background: #245662;
     padding: 15px;
-    @extend .scrollable-inc;
+    @extend .ScrollableInc;
 }
